--- a/style.css
+++ b/style.css
@@ -7,3 +7,84 @@ html,body{
     height: 100%;
     width: 100%;
 }
+body{
+     font-family: Arial, Helvetica, sans-serif;
+     
+}
+nav{
+    display: flex;
+    justify-content: space-between;
+    padding: 30px;
+}
+nav p{
+    border-bottom: 2px solid transparent;
+    font-weight: 700;
+    transition: 0.5s all ease;
+}
+nav p:hover{
+    border-bottom: 2px solid black;
+}
+.content{
+    display: flex;
+}
+.first{
+    height: 400px;
+    width: 55%;
+    background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url(https://i.pinimg.com/originals/f5/0b/2e/f50b2e949e1b5f63af490300b437553e.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+.second{
+    height: 400px;
+    width: 45%;
+    background-color: rgb(248, 174, 188);
+}
+.second h1{
+    color: white;
+    margin:   90px 140px;
+    font-size: 60px;
+    font-weight: 800;
+}
+.third{
+    height: 258px;
+    width: 45%;
+    background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url(https://thumbs.dreamstime.com/b/hand-takes-fresh-golden-french-croissant-baking-sheet-fresh-classic-pastries-hand-takes-fresh-golden-french-croissant-246246104.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+.fourth{
+    height: 258px;
+    width: 55%;
+    background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url(https://olivesnthyme.com/wp-content/uploads/2023/01/Chocolate-Donut-18.jpg);
+    /* background-position: center; */
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+h2{
+    color: white;
+    font-size: 45px;
+    font-weight: 900;
+    padding-top: 40px ;
+    padding-left: 25px;
+}
+h4{
+    padding-left: 25px;
+    color: wheat;
+    font-size: 20px;
+
+}
+button{
+    margin: 20px 25px;
+    padding: 10px 20px;
+    background-color:rgb(248, 174, 188) ;
+    border: none;
+    border-radius: 20px;
+    color: white;
+    font-weight: 700;
+}
+button:hover{
+    background-color: white;
+    color: rgb(248, 174, 188);
+}
